[metadata]
name = pyApp-SQLAlchemy
author = Tim Savage
author-email = tim@savage.company
description = SQLAlchemy Extension for PyApp
long-description = file: README.rst
long-description-content-type = text/x-rst
url = https://github.com/pyapp-org/pae.sqlalchemy
license = BSD
platform = any
keywords =
    application
    framework
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Libraries :: Application Frameworks
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
python_requires = >=3.6
packages = pae.sqlalchemy
test_suite = tests
setup_requires =
    pytest-runner
    setuptools >=38.3
install_requires =
    pyapp >=4.0b1
    sqlalchemy
tests_require =
    mock
    pytest
    pytest-cov

[options.extras_require]
dev =
	docutils
	black

[aliases]
test = pytest

[bdist_wheel]
universal = False

[tool:pytest]
addopts =
    --cov=pae

[check]
metadata = true
restructuredtext = true
strict = true
