[metadata]
name = pyApp-SQLAlchemy
author = Tim Savage
author-email = tim@savage.company
description = SQLAlchemy Extension for PyApp
long-description = file: README.rst
long-description-content-type = text/x-rst
url = https://github.com/pyapp-org/pyapp.sqlalchemy==1.3.11
platforms = any
license = BSD-3-Clause
licence_files =
    LICENSE
keywords =
    application
    framework
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Libraries :: Application Frameworks
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
python_requires = >=3.6
packages = pyapp_ext.sqlalchemy==1.3.11
test_suite = tests
setup_requires =
    pytest-runner==5.2
    setuptools >=38.3
install_requires =
    pyapp >=4.0
    sqlalchemy==1.3.11
tests_require =
    mock
    pytest
    pytest-cov

[options.entry_points]
pyapp.extensions =
    pyapp.sqlalchemy = pyapp_ext.sqlalchemy:Extension

[options.extras_require]
dev =
	docutils==0.15.2
	black

[aliases]
test = pytest

[bdist_wheel]
universal = False

[tool:pytest]
addopts =
    --cov=pyapp_ext.sqlalchemy==1.3.11

[check]
metadata = true
restructuredtext = true
strict = true
